monitoring/k8s/alertmanager-gotify.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-gotify
  namespace: monitoring
  labels:
    app: alertmanager-gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager-gotify
  template:
    metadata:
      labels:
        app: alertmanager-gotify
    spec:
      containers:
      - name: webhook
        image: ghcr.io/druggeri/alertmanager_gotify_bridge:latest
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 50m
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-gotify
  namespace: monitoring
  labels:
    app: alertmanager-gotify
spec:
  selector:
    app: alertmanager-gotify
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
